--- a/login page.html
+++ b/login page.html
@@ -19,7 +19,8 @@
         <button type="button" onclick="generateCaptcha()" title="Reload CAPTCHA">↻</button>
       </div>
       <input type="text" id="captchaInput" placeholder="Enter CAPTCHA" required />
-      <button type="submit">Login</button>
+      <button type="button"
+      onclick="loginUser()" >Login</button>"
       <div id="errorMsg" class="error"></div>
       <p>Don't have an account? <a href="register.html">Signup</a></p>
       <div class="success" id="successMsg"></div>
@@ -107,4 +108,25 @@
     document.getElementById("profilePage").style.display = "none";
     generateCaptcha();
   });
+
+  function loginUser() {
+    const name = document.getElementById("username").value;
+    const email = document.getElementById("email").value;
+    const pass = document.getElementById("password").value;
+
+    if (name && email && pass) {
+      // User details localStorage me save
+      localStorage.setItem("name", name);
+      localStorage.setItem("email", email);
+
+      // Redirect to dashboard page
+      window.location.href = "dashboard.html"; 
+    } else {
+      alert("⚠ Please fill all fields!");
+    }
+  }
+
 </script>
+</body>
+</html>
+
